<resources>
    <string name="app_name">Login</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter password</string>
    <string name="title_register">Register</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>


    <string name="terms_text">By creating an account, you agree with our</string>
    <string name="terms_n_privacy">Terms &amp; Privacy</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="txt_login_now">LOGIN NOW</string>
    <string name="register_now">Register Now</string>
    <string name="register">Register</string>
    <string name="login">Login</string>

    <string name="title_please_wait">Please Wait&#8230;</string>
    <string name="login_process">Processing login to your account&#8230;</string>
    <string name="whops">Whoops!</string>
    <string name="login_title">Good Job!</string>
    <string name="login_failed">Invalid Email or Password!</string>
    <string name="login_success">Login Successfully&#8230;</string>

    <!--dialog choose option-->
    <string name="dialog_success">Success!</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_read_more">Read More</string>
    <string name="dialog_dismiss">Dismiss</string>
    <string name="dialog_settings">GOTO SETTINGS</string>


</resources>