<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:text="Login"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:padding="10dp"
                    android:background="@drawable/input_bg"
                    android:drawableStart="@drawable/ic_edt_email"
                    android:drawablePadding="12dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:padding="10dp"
                    android:background="@drawable/input_bg"
                    android:drawableLeft="@drawable/ic_edt_password"
                    android:drawableStart="@drawable/ic_edt_password"
                    android:drawablePadding="12dp"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/txt_forgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="?attr/selectableItemBackground"
                android:padding="5dp"
                android:text="Forgot Password?"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:visibility="visible" />

        </LinearLayout>

        <com.balysv.materialripple.MaterialRippleLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:mrl_rippleAlpha="0.2"
            app:mrl_rippleColor="@color/colorRipple"
            app:mrl_rippleHover="true"
            app:mrl_rippleOverlay="true">

            <Button
                android:id="@+id/btn_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/bg_button_background"
                android:text="@string/login"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />

        </com.balysv.materialripple.MaterialRippleLayout>

        <LinearLayout
            android:id="@+id/lyt_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="visible">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="Do not have account?" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="5dp"
                android:background="@android:color/transparent"
                android:foreground="?attr/selectableItemBackground"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/register_now"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>