<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/lyt_bottom">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="20dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="10dp"
                    android:padding="10dp"
                    android:text="@string/title_register"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:id="@+id/name_rly"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/img_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_person" />

                        <EditText
                            android:inputType="text"
                            android:id="@+id/edt_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_toEndOf="@id/img_name"
                            android:background="@drawable/input_bg"
                            android:hint="Enter Name"
                            android:padding="10dp" />

                    </RelativeLayout>


                    <RelativeLayout
                        android:id="@+id/email_rly"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/name_rly">

                        <ImageView
                            android:id="@+id/img_email"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_email" />


                        <EditText
                            android:id="@+id/edt_email"
                            android:inputType="text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@id/img_email"
                            android:background="@drawable/input_bg"
                            android:hint="Enter Email"
                            android:padding="10dp" />

                    </RelativeLayout>


                    <RelativeLayout
                        android:id="@+id/passwrord_rly"
                        android:layout_marginBottom="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/email_rly">

                        <ImageView
                            android:id="@+id/img_password"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_password" />


                        <EditText
                            android:id="@+id/edt_password"
                            android:inputType="textPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@id/img_password"
                            android:background="@drawable/input_bg"
                            android:hint="Enter Password"
                            android:padding="10dp" />

                    </RelativeLayout>


                </RelativeLayout>

                <com.balysv.materialripple.MaterialRippleLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:mrl_rippleAlpha="0.2"
                    app:mrl_rippleColor="@color/colorRipple"
                    app:mrl_rippleHover="true"
                    app:mrl_rippleOverlay="true">

                    <Button
                        android:id="@+id/btn_register"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/bg_button_background"
                        android:text="@string/register"
                        android:textColor="@color/colorWhite"
                        android:textStyle="bold" />

                </com.balysv.materialripple.MaterialRippleLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/terms_text" />

                    <TextView
                        android:id="@+id/txt_terms"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:paddingLeft="6dp"
                        android:paddingRight="6dp"
                        android:text="@string/terms_n_privacy"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/lyt_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/already_have_account" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"
            android:foreground="?attr/selectableItemBackground"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/txt_login_now"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>